--- a/.github/workflows/TNT.yaml
+++ b/.github/workflows/TNT.yaml
@@ -53,7 +53,8 @@ jobs:
           rm -rf *_*.txt
           subfinder -dL domains.txt -config config/subfinder-config.yaml | dnsx -t 350 -o active_subdomains.txt
           dnsx -l active_subdomains.txt -t 350 | tee -a active_subdomains.txt
-          sort -u active_subdomains.txt     
+          sort -u active_subdomains.txt
+          cat active_subdomains.txt
         shell: bash
 
 
