--- a/.github/workflows/TNT.yaml
+++ b/.github/workflows/TNT.yaml
@@ -59,13 +59,17 @@ jobs:
 
 
       - name: Running port scanning...
+        continue-on-error: true
         run: |
-           masscan -iL active_subdomains.txt -p1-65535 --rate=12000 -oL - | grep "open" | awk '{print $4":"$3}' | tee active_urls.txt
-           cat active_urls.txt
+           # ma can't scan domain only ip assest
+           #masscan -iL active_subdomains.txt -p1-65535 --rate=12000 -oL - | grep "open" | awk '{print $4":"$3}' | tee active_urls.txt
+           #cat active_urls.txt
           
            #httpx -l active_subdomains.txt -mc 100,101,200,201,204,301,302,304,400,403,404,500,502,503 -p 1-65535 -t 13000 | tee active_urls.txt
            # httpx -l active_subdomains.txt -mc 100,101,200,201,204,301,302,304,400,403,404,500,502,503 -t 730 -o active_urls.txt
            # httpx -l active_subdomains.txt -title -t 230
+           
+           naabu -l active_subdomains.txt -tp 1000 -c 1000 -rate 20000 |  tee active_urls.txt
         shell: bash
 
       - name: Running way/gau for getting all urls...
