--- a/.github/workflows/TNT.yaml
+++ b/.github/workflows/TNT.yaml
@@ -98,6 +98,9 @@ jobs:
           git clone https://github.com/projectdiscovery/fuzzing-templates.git
           nuclei -l all_urls.txt -t fuzzing-templates/ -rl 500 -o fuzz_out.txt
           nuclei -l all_urls.txt -s medium, high, critical -rl 500 -o hig_out.txt
+
+          nuclei -l active_urls.txt -t fuzzing-templates/ -rl 500 -o fuzz_out.txt
+          nuclei -l active_urls.txt -s medium, high, critical -rl 500 -o hig_out.txt
           
         shell: bash
 
