--- a/.github/workflows/TNT.yaml
+++ b/.github/workflows/TNT.yaml
@@ -96,11 +96,13 @@ jobs:
         run: |
           nuclei -up && nuclei -ut
           git clone https://github.com/projectdiscovery/fuzzing-templates.git
-          nuclei -l all_urls.txt -t fuzzing-templates/ -rl 500 -o fuzz_out.txt
+          
+          nuclei -l all_urls.txt -t /home/runner/nuclei-templates -rl 500 -o fuzz_out.txt
+          # nuclei -l all_urls.txt -t fuzzing-templates/ -rl 500 -o fuzz_out.txt
           nuclei -l all_urls.txt -s medium, high, critical -rl 500 -o hig_out.txt
 
-          nuclei -l active_urls.txt -t fuzzing-templates/ -rl 500 -o fuzz_out.txt
-          nuclei -l active_urls.txt -s medium, high, critical -rl 500 -o hig_out.txt
+          # nuclei -l active_urls.txt -t fuzzing-templates/ -rl 500 -o fuzz_out.txt
+          # nuclei -l active_urls.txt -s medium, high, critical -rl 500 -o hig_out.txt
           
         shell: bash
 
