--- a/.github/workflows/TNT.yaml
+++ b/.github/workflows/TNT.yaml
@@ -59,9 +59,10 @@ jobs:
 
           nuclei -up && nuclei -ut
           git clone https://github.com/projectdiscovery/fuzzing-templates.git
-          pwd && ls -al
+          cp fuzzing-templates/ /tmp/
+          pwd && ls -al && ls -al fuzzing-templates/
           # nuclei -l all_urls.txt -t /home/runner/nuclei-templates -rl 500 -o fuzz_out.txt
-          nuclei -u http://testphp.vulnweb.com -t /home/runner/work/SSS/SSS/fuzzing-templates/ -rl 500 -o fuzz_out.txt
+          nuclei -u http://testphp.vulnweb.com -t /tmp/fuzzing-templates/ -rl 500 -o fuzz_out.txt
         shell: bash
 
 
