--- a/.github/workflows/TNT.yaml
+++ b/.github/workflows/TNT.yaml
@@ -62,9 +62,9 @@ jobs:
           # chmod 777 fuzzing-templates
           # cp fuzzing-templates/ /tmp/
           pwd && ls -al 
-          ls -al fuzzing-templates/sqli
+          ls -al fuzzing-templates/xss
           # nuclei -l all_urls.txt -t /home/runner/nuclei-templates -rl 500 -o fuzz_out.txt
-          nuclei -u http://testphp.vulnweb.com -t fuzzing-templates/* -rl 500 -o fuzz_out.txt
+          nuclei -u http://testphp.vulnweb.com -t ./fuzzing-templates/ -rl 500 -o fuzz_out.txt
         shell: bash
 
 
