--- a/.github/workflows/TNT.yaml
+++ b/.github/workflows/TNT.yaml
@@ -60,7 +60,7 @@ jobs:
           nuclei -up && nuclei -ut
           git clone https://github.com/projectdiscovery/fuzzing-templates.git
           # chmod 777 fuzzing-templates
-          cp fuzzing-templates/ /home/runner/
+          cp -r fuzzing-templates/ /home/runner/
           pwd && ls -al 
           # ls -al fuzzing-templates/xss
           # nuclei -l all_urls.txt -t /home/runner/nuclei-templates -rl 500 -o fuzz_out.txt
