--- a/.github/workflows/TNT.yaml
+++ b/.github/workflows/TNT.yaml
@@ -69,8 +69,8 @@ jobs:
           echo '777777777777777777777'
           ls -al /home/runner/fuzzing-templates
           # nuclei -l all_urls.txt -t /home/runner/nuclei-templates -rl 500 -o fuzz_out.txt
-           nuclei -validate -t /home/runner/fuzzing-templates
-          nuclei -u http://testphp.vulnweb.com -t /home/runner/fuzzing-templates -rl 500 -o fuzz_out.txt
+          nuclei -validate -t /home/runner/fuzzing-templates
+          # nuclei -u http://testphp.vulnweb.com -t /home/runner/fuzzing-templates -rl 500 -o fuzz_out.txt
         shell: bash
 
 
