--- a/.github/workflows/TNT.yaml
+++ b/.github/workflows/TNT.yaml
@@ -88,7 +88,7 @@ jobs:
           nuclei -l all_urls.txt -it /nuclei-templates -rl 500 -o fuzz_out.txt
           nuclei -l all_urls.txt -s medium, high, critical -rl 500 -o hig_out.txt
 
-          nuclei -l active_urls.txt -it /fuzzing-templates/ -rl 500 -o fuzz_out1.txt
+          nuclei -l active_urls.txt -it /fuzzing-templates -rl 500 -o fuzz_out1.txt
           nuclei -l active_urls.txt -s medium, high, critical -rl 500 -o hig_out1.txt
           
         shell: bash
